// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(30 100% 50% / 1)",
  "hsl(330 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(150 100% 50% / 1)",
  "hsl(210 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(60 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(90 100% 50% / 1)",
  "hsl(270 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(30 100% 50%)",
  "hsl(330 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(150 100% 50%)",
  "hsl(210 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(120 100% 50%)",
  "hsl(240 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(60 100% 50%)",
  "hsl(240 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(90 100% 50%)",
  "hsl(270 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 127.5 0 / 1)",
  "rgb(255 0 127.5 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 127.5 / 1)",
  "rgb(0 127.5 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 0 / 1)",
  "rgb(0 0 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 255 0 / 1)",
  "rgb(0 0 255 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(127.5 255 0 / 1)",
  "rgb(127.5 0 255 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(255 127.5 0)",
  "rgb(255 0 127.5)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 127.5)",
  "rgb(0 127.5 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 0)",
  "rgb(0 0 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(255 255 0)",
  "rgb(0 0 255)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(127.5 255 0)",
  "rgb(127.5 0 255)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 150,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 210,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 150,
    "L": 50,
    "S": 100,
  },
  {
    "H": 210,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 255,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 127.5,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 255,
    "R": 0,
  },
  {
    "B": 255,
    "G": 127.5,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Additive Harmony with decimals for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals and auto legacyCSS for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 1`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(15 100% 50% / 1)",
  "hsl(330 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 2`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 3`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(90 100% 50% / 1)",
  "hsl(180 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 4`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(60 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 5`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(30 100% 50% / 1)",
  "hsl(240 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50% / 1)" 6`] = `
[
  "hsl(0 100% 50% / 1)",
  "hsl(45 100% 50% / 1)",
  "hsl(270 100% 50% / 1)",
  "hsl(120 100% 50% / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 1`] = `
[
  "hsl(0 100% 50%)",
  "hsl(15 100% 50%)",
  "hsl(330 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 2`] = `
[
  "hsl(0 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 3`] = `
[
  "hsl(0 100% 50%)",
  "hsl(90 100% 50%)",
  "hsl(180 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 4`] = `
[
  "hsl(0 100% 50%)",
  "hsl(60 100% 50%)",
  "hsl(240 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 5`] = `
[
  "hsl(0 100% 50%)",
  "hsl(30 100% 50%)",
  "hsl(240 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "hsl(0 100% 50%)" 6`] = `
[
  "hsl(0 100% 50%)",
  "hsl(45 100% 50%)",
  "hsl(270 100% 50%)",
  "hsl(120 100% 50%)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 1`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 63.75 0 / 1)",
  "rgb(255 0 127.5 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 2`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 3`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(127.5 255 0 / 1)",
  "rgb(0 255 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 4`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 255 0 / 1)",
  "rgb(0 0 255 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 5`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 127.5 0 / 1)",
  "rgb(0 0 255 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0 / 1)" 6`] = `
[
  "rgb(255 0 0 / 1)",
  "rgb(255 191.25 0 / 1)",
  "rgb(127.5 0 255 / 1)",
  "rgb(0 255 0 / 1)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 1`] = `
[
  "rgb(255 0 0)",
  "rgb(255 63.75 0)",
  "rgb(255 0 127.5)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 2`] = `
[
  "rgb(255 0 0)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 3`] = `
[
  "rgb(255 0 0)",
  "rgb(127.5 255 0)",
  "rgb(0 255 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 4`] = `
[
  "rgb(255 0 0)",
  "rgb(255 255 0)",
  "rgb(0 0 255)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 5`] = `
[
  "rgb(255 0 0)",
  "rgb(255 127.5 0)",
  "rgb(0 0 255)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for "rgb(255 0 0)" 6`] = `
[
  "rgb(255 0 0)",
  "rgb(255 191.25 0)",
  "rgb(127.5 0 255)",
  "rgb(0 255 0)",
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 15,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 2`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 3`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 4`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 5`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50,"A":1} 6`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 45,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "A": 1,
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 1`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 15,
    "L": 50,
    "S": 100,
  },
  {
    "H": 330,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 2`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 3`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 90,
    "L": 50,
    "S": 100,
  },
  {
    "H": 180,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 4`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 60,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 5`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 30,
    "L": 50,
    "S": 100,
  },
  {
    "H": 240,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"H":0,"S":100,"L":50} 6`] = `
[
  {
    "H": 0,
    "L": 50,
    "S": 100,
  },
  {
    "H": 45,
    "L": 50,
    "S": 100,
  },
  {
    "H": 270,
    "L": 50,
    "S": 100,
  },
  {
    "H": 120,
    "L": 50,
    "S": 100,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 63.75,
    "R": 255,
  },
  {
    "A": 1,
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 2`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 3`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 4`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 5`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0,"A":1} 6`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "A": 1,
    "B": 0,
    "G": 191.25,
    "R": 255,
  },
  {
    "A": 1,
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "A": 1,
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 63.75,
    "R": 255,
  },
  {
    "B": 127.5,
    "G": 0,
    "R": 255,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 2`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 3`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 127.5,
  },
  {
    "B": 255,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 4`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 255,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 5`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 127.5,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 0,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;

exports[`ColorTranslator harmony tests Subtractive Harmony with decimals for {"R":255,"G":0,"B":0} 6`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 255,
  },
  {
    "B": 0,
    "G": 191.25,
    "R": 255,
  },
  {
    "B": 255,
    "G": 0,
    "R": 127.5,
  },
  {
    "B": 0,
    "G": 255,
    "R": 0,
  },
]
`;
